syntax = "proto3";

package com.road.yishi.proto.secret;

message SecretInfoMsg {
  int32 secretId = 1;
  int32 type = 2;
  int32 maxLayer = 3;
  int32 curLayer = 4;
  int32 eventId = 5;
  string passSecret = 6;
  int32 curStatus = 7;
  string treasure = 8;
  int32 enterNum = 9;
  string dropItem = 10;
  int32 dropType = 11;
}
